--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
     // يمكنك هنا إضافة كود لحفظ التقدم الحالي إذا لزم الأمر
     localStorage.removeItem("loggedIn");
     localStorage.removeItem("courseStartDate");
-    window.location.href = "https://najy-hub.github.io/Login-Course/";
+    window.location.href = " https://najy-hub.github.io/NAjy_login/";
   }
 
   // بدء تتبع الجلسة عند تحميل الصفحة
