--- a/index.html
+++ b/index.html
@@ -626,12 +626,81 @@
     
       ],
        [
-        { title: "📘 المحاضرة 1", url: "https://www.youtube.com/embed/vid6" },
-        { title: "📘 المحاضرة 2", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 Lec1: Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘 Lec2: Energy Storage II", url: "https://iframe.mediadelivery.net/embed/460802/5592c64b-708f-4cad-9773-4441d64fc9aa?autoplay=0" },
+        { title: "📘 Lec3: Batteries", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 Lec4: Spacial Batteries", url: "https://iframe.mediadelivery.net/embed/460802/6da7a7e6-5049-4b7a-b982-85fcb6dbbe32?autoplay=0" },
+        { title: "📘 Bouns:VRB", url: "https://iframe.mediadelivery.net/embed/460802/05a5a81b-27fc-41e8-9df2-7f1edb58cc4e?autoplay=0" }
+      ],
+       [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
         { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
         { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
         { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
       ],
+       [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ], [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      ],
+      [
+        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
+        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
+        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+      
     ];
 
     const quizLinks = [
