--- a/index.html
+++ b/index.html
@@ -628,7 +628,10 @@
        [
         { title: "📘 Lec1: Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
         { title: "📘 Lec2: Energy Storage II", url: "https://iframe.mediadelivery.net/embed/460802/5592c64b-708f-4cad-9773-4441d64fc9aa?autoplay=0" },
-        { title: "📘 Lec4: Spacial Batteries", url: "https://iframe.mediadelivery.net/embed/460802/6da7a7e6-5049-4b7a-b982-85fcb6dbbe32?autoplay=0" },
+        { title: "📘 Lec3: Spacial Batteries", url: "https://iframe.mediadelivery.net/embed/460802/6da7a7e6-5049-4b7a-b982-85fcb6dbbe32?autoplay=0" },
+        { title: "📘 Lec4-1:Batteries I", url: "https://iframe.mediadelivery.net/embed/460802/b01b6b62-c700-48c9-8969-672d96534a7a?autoplay=0" },
+        { title: "📘 Lec4-2:Batteries II", url: "https://iframe.mediadelivery.net/embed/460802/ef0bb13e-89fb-4233-9431-8c3924a4e091?autoplay=0" },
+        { title: "📘 Lec4-3:Batteries III", url: "https://iframe.mediadelivery.net/embed/460802/63f72a46-fe96-451e-85ef-d3235e1eeb61?autoplay=0" },
         { title: "📘 Bouns:VRB", url: "https://iframe.mediadelivery.net/embed/460802/05a5a81b-27fc-41e8-9df2-7f1edb58cc4e?autoplay=0" }
       ],
        [
