--- a/index.html
+++ b/index.html
@@ -635,11 +635,11 @@
         { title: "📘 Bouns:VRB", url: "https://iframe.mediadelivery.net/embed/460802/05a5a81b-27fc-41e8-9df2-7f1edb58cc4e?autoplay=0" }
       ],
        [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1: Load Management", url: "https://iframe.mediadelivery.net/embed/460802/e1368f28-8899-44b9-977e-d7b2188883ff?autoplay=0" },
+        { title: "📘 Lec2: System Sizing & Selection", url: "https://iframe.mediadelivery.net/play/460802/37812fff-fbc8-4b5f-a0cc-0ef70565c21b?autoplay=0" },
+        { title: "📘 Lec3: Protection & Safty", url: "https://iframe.mediadelivery.net/play/460802/121d8171-d914-4597-97b1-3106b8dd2dab?autoplay=0" },
+        { title: "📘 Lec4: Grounding/AC Protection", url: "https://iframe.mediadelivery.net/play/460802/eafe745b-3fa6-4c56-bade-add8d1f50354?autoplay=0" },
+        { title: "📘 Lec5: DC Protection", url: "https://iframe.mediadelivery.net/play/460802/06989244-4a04-4089-9027-88fcc5962a17?autoplay=0" }
       ],
        [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
