--- a/index.html
+++ b/index.html
@@ -642,11 +642,11 @@
         { title: "📘 Lec5: DC Protection", url: "https://iframe.mediadelivery.net/embed/460802/06989244-4a04-4089-9027-88fcc5962a17?autoplay=0" }
       ],
        [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1: Commercial Load", url: "https://iframe.mediadelivery.net/embed/460802/ed503771-6887-41cc-b1e1-5d67e814c696?autoplay=0" },
+        { title: "📘  Lec2: Main Components", url: "https://iframe.mediadelivery.net/embed/460802/6f5e17d8-67c8-4d80-a9c8-6cb164bfe4cb?autoplay=0" },
+        { title: "📘 Lec3: Voltage Reflection", url: "https://iframe.mediadelivery.net/embed/460802/4f8bd923-a9c9-4621-a312-9d6c34a75047?autoplay=0" },
+        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9?autoplay=0" },
+        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
