--- a/index.html
+++ b/index.html
@@ -646,7 +646,8 @@
         { title: "📘  Lec2: Main Components", url: "https://iframe.mediadelivery.net/embed/460802/6f5e17d8-67c8-4d80-a9c8-6cb164bfe4cb?autoplay=0" },
         { title: "📘 Lec3: Voltage Reflection", url: "https://iframe.mediadelivery.net/embed/460802/4f8bd923-a9c9-4621-a312-9d6c34a75047?autoplay=0" },
         { title: "📘  Lec4: Effect Cable Lenght", url: "https://iframe.mediadelivery.net/embed/460802/cb48f35c-6f66-49d9-96b3-b93f975adf6e?autoplay=0" },
-        { title: "📘  Lec5: Pumping Calculation", url: "https://iframe.mediadelivery.net/embed/460802/cbd3d91e-fb75-41ca-b4d4-a19c304dc671?autoplay=0" }
+        { title: "📘  Lec5: Pumping Calculation", url: "https://iframe.mediadelivery.net/embed/460802/cbd3d91e-fb75-41ca-b4d4-a19c304dc671?autoplay=0" },
+         { title: "📘  Lec6: Real-World", url: "https://iframe.mediadelivery.net/embed/460802/cbd3d91e-fb75-41ca-b4d4-a19c304dc671?autoplay=0" }
          ],
          [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
@@ -929,7 +930,7 @@
     initPage();
 
      // إعدادات مهلة الجلسة (بالدقائق)
-  const SESSION_TIMEOUT = 30; // 30 دقيقة
+  const SESSION_TIMEOUT = 180; // 30 دقيقة
   const WARNING_BEFORE_TIMEOUT = 5; // تنبيه قبل 5 دقائق من الانتهاء
   
   // متغيرات تتبع الجلسة
