--- a/index.html
+++ b/index.html
@@ -650,11 +650,12 @@
          { title: "📘  Lec6: Real-World", url: "https://iframe.mediadelivery.net/embed/460802/c1ae5728-cf6c-4805-9d55-379250864517?autoplay=0" }
          ],
          [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1: PV SYST Installation", url: "https://iframe.mediadelivery.net/embed/460802/18a9e077-ff9d-488e-8e14-e1e9d3f215ad?autoplay=0" },
+        { title: "📘 Lec2: Frist Project_Location/Tilt angle ", url: "https://iframe.mediadelivery.net/embed/460802/8994c21c-4d67-451a-893b-04b27e1f8d07?autoplay=0" },
+        { title: "📘 Lec3: Frist Project_User Needs ", url: "https://iframe.mediadelivery.net/embed/460802/4f557cf6-d7bb-489a-8e8e-82b2e2f4c1cf?autoplay=0" },
+        { title: "📘 Lec4: Frist Project_System ", url: "https://iframe.mediadelivery.net/embed/460802/df70131d-f724-417a-8238-adddb7870da6?autoplay=0" },
+        { title: "📘 Lec5: Frist Project_Multi Varients ", url: "https://iframe.mediadelivery.net/embed/460802/df70131d-f724-417a-8238-adddb7870da6?autoplay=0" },
+        { title: "📘 Lec6: Frist Project_Pumping ", url: "https://iframe.mediadelivery.net/embed/460802/5f0bcfe9-fa72-4b3a-a5e9-18cff65a8f8e?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
