--- a/index.html
+++ b/index.html
@@ -658,11 +658,11 @@
         { title: "📘 Lec6: Frist Project_Pumping ", url: "https://iframe.mediadelivery.net/embed/460802/5f0bcfe9-fa72-4b3a-a5e9-18cff65a8f8e?autoplay=0" }
       ],
       [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1: On-grid 1MW Station", url: "https://iframe.mediadelivery.net/embed/460802/d36edc7c-04ac-499b-bb0b-7287430d1dbf?autoplay=0" },
+        { title: "📘 Lec2: Thermal losses", url: "https://iframe.mediadelivery.net/embed/460802/5500cb64-969f-4e1c-845f-a773220c8bb2?autoplay=0" },
+        { title: "📘 Lec3: Module Quality Loss", url: "https://iframe.mediadelivery.net/embed/460802/c57d3650-b340-4301-9237-4b6df57ddf07?autoplay=0" },
+        { title: "📘 Lec4: Soiling Loss", url: "https://iframe.mediadelivery.net/embed/460802/a6d977a1-2064-4d11-880c-c6acbe0cc144?autoplay=0" },
+        { title: "📘 Lec5: PV Risk Management", url: "https://iframe.mediadelivery.net/embed/460802/9e661fd1-83d0-4f03-9a47-988f2ad4bb9f?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
