--- a/index.html
+++ b/index.html
@@ -665,11 +665,12 @@
         { title: "📘 Lec5: PV Risk Management", url: "https://iframe.mediadelivery.net/embed/460802/9e661fd1-83d0-4f03-9a47-988f2ad4bb9f?autoplay=0" }
       ],
       [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1: Mutul Shed", url: "https://iframe.mediadelivery.net/embed/460802/d65cdbed-10df-4ea4-b0f8-2572958662bd?autoplay=0" },
+        { title: "📘 Lec2: Near Shed", url: "https://iframe.mediadelivery.net/embed/460802/d7ec564d-058a-445b-9d6a-20fb52f9f08b?autoplay=0" },
+        { title: "📘 Lec3: Optimization Tool I", url: "https://iframe.mediadelivery.net/embed/460802/fec474bb-fb67-4b96-b403-f68257e533c9?autoplay=0" },
+        { title: "📘 Lec4: Optimization Tool II", url: "https://iframe.mediadelivery.net/ebed/460802/9df35b29-5868-488b-9241-d1dad0763f30?autoplay=0" },
+        { title: "📘 Lec5: Batch Simulation I", url: "https://www.youtube.com/embed/vid10?autoplay=0" },
+        { title: "📘 Lec6: Batch Simulation II", url: "https://www.youtube.com/embed/vid10?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
