--- a/index.html
+++ b/index.html
@@ -673,11 +673,10 @@
         { title: "📘 Lec6: Batch Simulation II", url: "https://iframe.mediadelivery.net/embed/460802/e9fed9ce-963f-4b15-a2da-d42a4bf4e7e5?autoplay=0" }
       ],
       [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1: Backround Economic", url: "https://iframe.mediadelivery.net/embed/460802/5e2a7778-b5de-48dd-999f-2faa647e23b7?autoplay=0" },
+        { title: "📘 Lec2: Economic Dispatch", url: "https://iframe.mediadelivery.net/embed/460802/15c21829-095c-490b-a3a7-b054d98b934a?autoplay=0" },
+        { title: "📘 Lec3: Practice ED", url: "https://iframe.mediadelivery.net/embed/460802/33a9f371-512d-450a-b573-f35355b3f75a?autoplay=0" },
+        { title: "📘 Lec4: HOMER Pro overview", url: "https://www.youtube.com/embed/vid9?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
