--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         { title: "📘 Lec1: Backround Economic", url: "https://iframe.mediadelivery.net/embed/460802/5e2a7778-b5de-48dd-999f-2faa647e23b7?autoplay=0" },
         { title: "📘 Lec2: Economic Dispatch", url: "https://iframe.mediadelivery.net/embed/460802/15c21829-095c-490b-a3a7-b054d98b934a?autoplay=0" },
         { title: "📘 Lec3: Practice ED", url: "https://iframe.mediadelivery.net/embed/460802/33a9f371-512d-450a-b573-f35355b3f75a?autoplay=0" },
-        { title: "📘 Lec4: HOMER Pro overview", url: "https://www.youtube.com/embed/vid9?autoplay=0" }
+        { title: "📘 Lec4: HOMER Pro overview", url: "https://iframe.mediadelivery.net/embed/460802/39859c01-023a-43ea-b679-ecb7e59f65a4?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
