--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         { title: "📘 Basic of Economic", url: "https://iframe.mediadelivery.net/embed/460802/694dff4b-b351-4583-a3b7-7f0661a9cdda?autoplay=0" },
         { title: "📘 HOMER Practice Part I", url: "https://iframe.mediadelivery.net/embed/460802/cd2e1dd0-ee64-4890-833d-ca146a1e328d?autoplay=0" },
         { title: "📘 HOMER Practice Part II", url: "https://iframe.mediadelivery.net/embed/460802/8e0fb4ad-4903-443d-9bae-78fe51d63bb6?autoplay=0" },
-        { title: "📘 HOMER Features", url: "https://www.youtube.com/embed/vid9?autoplay=0" }
+        { title: "📘 HOMER Features", url: "https://iframe.mediadelivery.net/embed/460802/04551e31-ec0a-4568-977e-b771fe20a217?autoplay=0" }
       ],
       [
         { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
